# rustweek-2026-wasm-myths

./: .gitignore  404.html  Cargo.toml  README.md  bacon.toml  book.toml  build.sh  deploy.sh  dev.sh  index.html  print.html  searcher-c2a407aa.js  searchindex-22f7667a.js  toc-91979b11.js  toc.html
book-src/: SUMMARY.md  coi-serviceworker.js
book-src/js/: main.js
book-src/js/assets/: worker-DXJmbnyf.js
book-src/pages/: why_wasm.md
book-src/pages/appendix/: wasm_gc_jitter.md  wasm_simd_speedup.md  wasm_threading.md
book-src/pages/wasm_bridge_myths/: intro.md  myth_ffi_fn_calls.md  myth_objects.md  myth_strings.md
javascript/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
javascript/generated_wasm/: rustweek_2026_wasm_myths.d.ts  rustweek_2026_wasm_myths.js  rustweek_2026_wasm_myths_bg.wasm  rustweek_2026_wasm_myths_bg.wasm.d.ts
javascript/src/: client_worker.ts  main.entry.ts  messages.ts  worker.ts
js/: main.js
js/assets/: index_bg-Cd-hMHtH.wasm  rustweek_2026_wasm_myths_bg-CzkkHRA3.wasm  rustweek_2026_wasm_myths_simd_bg-Bl2HaIGe.wasm  saxpy-worker-clone-CWQxGUZG.js  saxpy-worker-transfer-Bz8Ve2y0.js  worker-BPhnaYqr.js  workerHelpers-DKqIby_c.js
pages/: why_wasm.html
pages/wasm_bridge_myths/: intro.html  myth_ffi_fn_calls.html  myth_objects.html  myth_strings.html
pages/wasm_performance/: intro.html  wasm_gc_jitter.html  wasm_simd_speedup.html  wasm_threading.html
src/: lib.rs  wasm_bridge_myths.rs  wasm_bridge_object_myths.rs  wasm_gc_jitter.rs  wasm_simd_speedup.rs  wasm_threading.rs
theme/: head.hbs
(+32 files in other folders)
